@@ -3767,6 +3767,7 @@ argument_list|)
 expr_stmt|;
 if|if
 condition|(
+operator|(
 name|md
 operator|.
 name|getConfiguration
@@ -3775,6 +3776,26 @@ name|conf
 argument_list|)
 operator|==
 literal|null
+operator|)
+operator|||
+name|Configuration
+operator|.
+name|Visibility
+operator|.
+name|PRIVATE
+operator|.
+name|equals
+argument_list|(
+name|md
+operator|.
+name|getConfiguration
+argument_list|(
+name|conf
+argument_list|)
+operator|.
+name|getVisibility
+argument_list|()
+argument_list|)
 condition|)
 block|{
 if|if
